test/compile_errors/stage1/obj/volatile_on_global_assembly.zig
comptime {
    asm volatile ("");
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:9: error: volatile is meaningless on global assembly
